--- a/index.html
+++ b/index.html
@@ -507,6 +507,9 @@
 
         // Event listener cho nút "Chụp Ảnh"
         captureButton.addEventListener('click', capturePhoto);
+
+        // Event listener cho nút "Chụp Lại"
+        retakeButton.addEventListener('click', retakePhoto);
     </script>
 
 </body>
