--- a/index.html
+++ b/index.html
@@ -75,9 +75,11 @@
             border: none;
             border-radius: 8px;
             cursor: pointer;
-            min-width: 160px;
+            flex: 1 1 160px; /* Đảm bảo nút có cùng kích thước */
+            max-width: 220px; /* Giới hạn kích thước tối đa */
             transition: background-color 0.3s ease, transform 0.2s ease;
             color: #fff;
+            text-align: center;
         }
 
         #captureButton {
@@ -124,7 +126,7 @@
 
         #predictionResult {
             margin-top: 20px;
-            font-size: 20px;
+            font-size: 16px; /* Giảm kích thước font chữ */
             font-weight: bold;
             color: #333;
             min-height: 50px;
@@ -146,7 +148,7 @@
             width: 100%;
             margin: 0 auto;
             padding-left: 20px;
-            font-size: 1em;
+            font-size: 0.9em; /* Giảm kích thước font chữ */
             color: #555;
             list-style-position: inside; /* Căn đều các dấu đầu dòng */
         }
@@ -216,6 +218,8 @@
             background-color: #17a2b8;
             display: none;
             margin-top: 10px;
+            flex: 1 1 160px; /* Đảm bảo nút có cùng kích thước */
+            max-width: 220px; /* Giới hạn kích thước tối đa */
         }
 
         #readButton:hover:not(:disabled) {
@@ -272,6 +276,7 @@
                 <li>Đảm bảo camera của bạn được đặt sao cho biển báo rõ ràng và trung tâm trong khung hình.</li>
                 <li>Sau khi chụp, hệ thống sẽ tự động nhận diện biển báo và hiển thị kết quả.</li>
                 <li>Nhấn nút <strong>"Đọc"</strong> để nghe lại ý nghĩa của biển báo đã nhận diện.</li>
+                <li>Chọn nút <strong>"Làm Bài Kiểm Tra"</strong> để thực hiện bài kiểm tra giao thông.</li>
             </ol>
             <p id="signCount">Số lượng biển báo có thể nhận diện: <strong id="totalSigns">0</strong></p>
         </div>
@@ -412,6 +417,7 @@
                     <li>Đảm bảo camera của bạn được đặt sao cho biển báo rõ ràng và trung tâm trong khung hình.</li>
                     <li>Sau khi chụp, hệ thống sẽ tự động nhận diện biển báo và hiển thị kết quả.</li>
                     <li>Nhấn nút <strong>"Đọc"</strong> để nghe lại ý nghĩa của biển báo đã nhận diện.</li>
+                    <li>Chọn nút <strong>"Làm Bài Kiểm Tra"</strong> để thực hiện bài kiểm tra giao thông.</li>
                 </ol>
                 <p id="signCount">Số lượng biển báo có thể nhận diện: <strong id="totalSigns">0</strong></p>
             `;
@@ -530,7 +536,7 @@
         // Event listener cho nút "Chụp Lại"
         retakeButton.addEventListener('click', retakePhoto);
 
-        // **Thêm sự kiện cho nút "Tải Ảnh Xuống"**
+        // Thêm sự kiện cho nút "Tải Ảnh Xuống"
         downloadButton.addEventListener('click', downloadPhoto);
     </script>
 
