--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
                 if (prediction.length > 0) {
                     prediction.sort((a, b) => b.probability - a.probability);
                     const topPrediction = prediction[0];
-                    predictionResult.innerHTML = `<span style="color: var(--primary-color);">Kết quả: ${topPrediction.className} (${(topPrediction.probability * 100).toFixed(2)})</span>`; /* Loại bỏ dấu % */
+                    predictionResult.innerHTML = `<span style="color: var(--primary-color);">Kết quả: ${topPrediction.className}</span>`; /* Loại bỏ dấu % */
                     const signCode = topPrediction.className.substring(0, 5).toUpperCase();
                     if (signMeanings.hasOwnProperty(signCode)) {
                         const meaningText = `Ý nghĩa: ${signMeanings[signCode]}`;
