--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
                         // Không tự động đọc
                         // speakText(meaningText);
                     } else {
-                        signMeaning.textContent = "Ý nghĩa: Không tìm thấy ý nghĩa cho biển báo này.";
+                        signMeaning.textContent = "Ý nghĩa: Đây là một hình khác, không phải là biến báo giao thông. Bạn hãy nhấn nút chụp lại và làm theo các bước hướng. Xin cảm ơn.";
                         readButton.style.display = 'inline-block';
                         // Hiển thị nút làm bài kiểm tra
                         quizButton.style.display = 'inline-block';
