--- a/index.html
+++ b/index.html
@@ -321,9 +321,9 @@
         let model, maxPredictions;
         const signMeanings = {
             "P.101": "Để báo trước nơi giao nhau có điều khiển giao thông bằng tín hiệu đèn đỏ, hãy chú ý dừng lại.",
-            "W.208": "Biển báo giao nhau với đường ưu tiên: Báo trước sắp đến nơi giao nhau với đường ưu tiên. Các xe đi trên đường có đặt biển này phải nhường đường cho xe đi trên đường ưu tiên khi qua nơi giao nhau (trừ các loại xe được quyền ưu tiên theo quy định). Cần chú ý quan sát, giảm tốc độ để đảm bảo an toàn khi tham gia giao thông.",
-            "W.205": "Biển báo giao nhau với đường cùng cấp: Báo trước sắp đến nơi giao nhau với đường cùng cấp (không có đường nào ưu tiên). Cần chú ý quan sát, giảm tốc độ để đảm bảo an toàn khi tham gia giao thông.",
-            "W.207": "Chỉ được đặt trên đường ưu tiên. Báo trước sắp đến nơi giao nhau với không ưu tiên. Cần chú ý quan sát, giảm tốc độ để đảm bảo an toàn khi tham gia giao thông",
+            "W.208": "Ý nghĩa của Biển báo giao nhau với đường ưu tiên...: Báo trước sắp đến nơi giao nhau với đường ưu tiên. Các xe đi trên đường có đặt biển này phải nhường đường cho xe đi trên đường ưu tiên khi qua nơi giao nhau (trừ các loại xe được quyền ưu tiên theo quy định). Cần chú ý quan sát, giảm tốc độ để đảm bảo an toàn khi tham gia giao thông.",
+            "W.205": "Ya nghĩa của Biển báo giao nhau với đường cùng cấp..: Báo trước sắp đến nơi giao nhau với đường cùng cấp (không có đường nào ưu tiên). Cần chú ý quan sát, giảm tốc độ để đảm bảo an toàn khi tham gia giao thông.",
+            "W.207": "Ý nghĩa của Biển báo giao nhau với đường không ưu tiên.. Chỉ được đặt trên đường ưu tiên. Báo trước sắp đến nơi giao nhau với không ưu tiên. Cần chú ý quan sát, giảm tốc độ để đảm bảo an toàn khi tham gia giao thông",
             // Thêm các ý nghĩa cho các biển báo khác ở đây
         };
 
